--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/bootstrap.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
   <script src="js/jquery.js"></script>
   <script src="js/scripts.js"></script>
@@ -14,15 +15,15 @@
   <div class="container">
     <h1>Out-Of-This-World Pizza</h1>
     <!-- ORDER FORM -->
-    <div id="orderForm">
+    <div id="orderForm" class="panel">
       <h2>Custom Za</h2>
       <hr>
-      <div id="choices" class="panel">
+      <div id="choices">
         <!-- toppings -->
         <div id="toppingSelect">
           <h3>Toppings: ($2 Each)</h3>
           <hr>
-          <input type="checkbox" name="cheese" value="Cheese" checked> Cheese<br>
+          <input type="checkbox" name="cheese" value="Cheese" checked> Cheese (Free)<br>
           <input type="checkbox" name="pepperoni" value="Pepperoni"> Pepperoni<br>
           <input type="checkbox" name="sausage" value="Sausage"> Sausage<br>
           <input type="checkbox" name="onion" value="Onion"> Onion<br>
@@ -67,6 +68,7 @@
       </div>
     </div>
     <button class="btn btn-primary btn-lg btn-block" id="purchaseButton">Purchase Order</button>
+    <!-- RECEIPT PAGE -->
     <div id="receipt">
       <h6>Thank you for your order!</h6>
       <button class="btn btn-primary btn-lg btn-block" id="buyMoreButton">Buy More Za!</button>
