Add Order and Pizza objects, add click listeners to size selection and 'add za' button, and push new pizza to pizzas array in Order object using Order.prototype.addPizza()

--- a/index.html
+++ b/index.html
@@ -23,22 +23,22 @@
         <div id="toppingSelect">
           <h3>Toppings: ($2 Each)</h3>
           <hr>
-          <input type="checkbox" name="cheese" value="Cheese" checked> Cheese (Free)<br>
-          <input type="checkbox" name="pepperoni" value="Pepperoni"> Pepperoni<br>
-          <input type="checkbox" name="sausage" value="Sausage"> Sausage<br>
-          <input type="checkbox" name="onion" value="Onion"> Onion<br>
-          <input type="checkbox" name="pepper" value="Pepper"> Pepper<br>
-          <input type="checkbox" name="olive" value="Olive"> Olive<br>
+          <input type="checkbox" name="toppings" value="Cheese" checked> Cheese (Free)<br>
+          <input type="checkbox" name="toppings" value="Pepperoni"> Pepperoni<br>
+          <input type="checkbox" name="toppings" value="Sausage"> Sausage<br>
+          <input type="checkbox" name="toppings" value="Onion"> Onion<br>
+          <input type="checkbox" name="toppings" value="Pepper"> Pepper<br>
+          <input type="checkbox" name="toppings" value="Olive"> Olive<br>
         </div>
         <!-- sizes -->
         <div id="sizeSelect">
           <h3>Size:</h3>
           <hr>
-          <div class="pizzaSize" id="mercury">
+          <div class="pizzaSize" id="Mercury">
             <img src="http://unsplash.it/50/50" alt="Picture of small pizza">
             <h4>Mercury</h4>
           </div>
-          <div class="pizzaSize" id="earth">
+          <div class="pizzaSize" id="Earth">
             <img src="http://unsplash.it/50/50" alt="Picture of medium pizza">
             <h4>Earth</h4>
           </div>
