Add deletePizza and removePizzaDiv functions to remove Pizza object from Order object when delete button is clicked, and remove it from the DOM

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
           <p>Cost: $<span id="cost">24</span></p>
         </div>
         <div class="buttons">
-          <button id="deleteButton" class="btn btn-danger btn-sm">X</button>
-          <button id="editButton" class="btn btn-warning btn-block">EDIT</button>
+          <button class="btn btn-danger btn-sm deleteButton">X</button>
+          <button class="btn btn-warning btn-block editButton">EDIT</button>
         </div>
       </div>
     </div>
