Add 'purchase' and 'buy more za' button functionalities to complete the page navigation loop

--- a/index.html
+++ b/index.html
@@ -52,20 +52,7 @@
     </div>
     <!-- PIZZAS -->
     <div id="pizzas">
-      <!-- New pizzas are appended here -->
-      <div class="pizza">
-        <img src="http://unsplash.it/100/100" alt="Picture of pizza">
-        <div class="pizzaInfo">
-          <h5 id="topping">Sausage + Pepperoni</h5>
-          <hr>
-          <p>Size: <span id="size">Mars</span></p>
-          <p>Cost: $<span id="cost">24</span></p>
-        </div>
-        <div class="buttons">
-          <button class="btn btn-danger btn-sm deleteButton">X</button>
-          <button class="btn btn-warning btn-block editButton">EDIT</button>
-        </div>
-      </div>
+      <!-- New pizzas are prepended here -->
     </div>
     <button class="btn btn-primary btn-lg btn-block" id="purchaseButton">Purchase Order</button>
     <!-- RECEIPT PAGE -->
