Refactor calculate price to be a Pizza object method

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
   <link rel="stylesheet" href="css/styles.css">
   <script src="js/jquery.js"></script>
   <script src="js/scripts.js"></script>
-  <title>Pizza Parlor</title>
+  <title>Pizza Planet</title>
 </head>
 <body>
   <div class="container">
-    <h1>Out-Of-This-World Pizza</h1>
+    <h1>Pizza Planet</h1>
     <!-- ORDER FORM -->
     <div id="orderForm" class="panel">
-      <h2>Custom Za</h2>
+      <h2>Customize Pizza</h2>
       <hr>
       <div id="choices">
         <!-- toppings -->
@@ -58,6 +58,9 @@
     <!-- RECEIPT PAGE -->
     <div id="receipt">
       <h6>Thank you for your order!</h6>
+      <div id="receiptInfo">
+
+      </div>
       <button class="btn btn-primary btn-lg btn-block" id="buyMoreButton">Buy More Za!</button>
     </div>
   </div>
