Add order details to receipt, Add background image

--- a/index.html
+++ b/index.html
@@ -26,9 +26,15 @@
           <input type="checkbox" name="toppings" value="Cheese" checked> Cheese (Free)<br>
           <input type="checkbox" name="toppings" value="Pepperoni"> Pepperoni<br>
           <input type="checkbox" name="toppings" value="Sausage"> Sausage<br>
+          <input type="checkbox" name="toppings" value="Canadian Bacon"> Canadian Bacon<br>
           <input type="checkbox" name="toppings" value="Onion"> Onion<br>
           <input type="checkbox" name="toppings" value="Pepper"> Pepper<br>
           <input type="checkbox" name="toppings" value="Olive"> Olive<br>
+          <input type="checkbox" name="toppings" value="Pineapple"> Pineapple<br>
+          <input type="checkbox" name="toppings" value="Hot sauce"> Hot sauce<br>
+          <input type="checkbox" name="toppings" value="Feta Cheese"> Feta Cheese<br>
+          <input type="checkbox" name="toppings" value="Pesto"> Pesto<br>
+          <input type="checkbox" name="toppings" value="Anchovies"> Anchovies<br>
         </div>
         <!-- sizes -->
         <div id="sizeSelect">
@@ -48,7 +54,7 @@
           </div>
         </div>
       </div>
-      <button id="addZa" class="btn btn-success btn-lg btn-block">Add Za</button>
+      <button id="addZa" class="btn btn-success btn-lg btn-block">Add Pizza</button>
     </div>
     <!-- PIZZAS -->
     <div id="pizzas">
@@ -64,7 +70,7 @@
         <p>Total Cost: $<span id="totalCost"></span></p>
         <hr>
         <h4>Special thanks for choosing Pizza Planet.</h4>
-        <p>&copy; 2020 Jamison Cozart</p>
+        <p>&copy; 2020 Pizza Planet</p>
       </div>
       <button class="btn btn-primary btn-lg btn-block" id="buyMoreButton">Buy More Za!</button>
     </div>
