Add custom styling and night mode button

--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
 </head>
 <body>
   <div class="container">
-    <h1>Pizza Planet</h1>
+    <h1><img src="img/rocketWhite.png"> Pizza Planet</h1>
     <!-- ORDER FORM -->
     <div id="orderForm" class="panel">
-      <h2>Customize Pizza</h2>
+      <div id="heading">
+        <button id="lightDark"><img src="img/moon.png"></button>
+        <h2>Customize Pizza</h2>
+      </div>
       <hr>
       <div id="choices">
         <!-- toppings -->
@@ -54,7 +57,7 @@
           </div>
         </div>
       </div>
-      <button id="addZa" class="btn btn-success btn-lg btn-block">Add Pizza</button>
+      <button id="addZa" class="btn btn-success btn-lg btn-block"><img src="img/add.png"> Add Pizza</button>
     </div>
     <!-- PIZZAS -->
     <div id="pizzas">
@@ -72,7 +75,7 @@
         <h4>Special thanks for choosing Pizza Planet.</h4>
         <p>&copy; 2020 Pizza Planet</p>
       </div>
-      <button class="btn btn-primary btn-lg btn-block" id="buyMoreButton">Buy More Za!</button>
+      <button class="btn btn-primary btn-lg btn-block" id="buyMoreButton">Buy More Pizza!</button>
     </div>
   </div>
 </body>
