Add dark theme toggle to sun/moon button

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- ORDER FORM -->
     <div id="orderForm" class="panel">
       <div id="heading">
-        <button id="lightDark"><img src="img/moon.png"></button>
+        <button id="lightDark"><img id="moonSun" src="img/moon.png"></button>
         <h2>Customize Pizza</h2>
       </div>
       <hr>
@@ -66,7 +66,7 @@
     <button class="btn btn-primary btn-lg btn-block" id="purchaseButton">Purchase Order</button>
     <!-- RECEIPT PAGE -->
     <div id="receipt">
-      <div id="receiptInfo">
+      <div class="receiptInfo">
         <h3>Order Summary:</h3>
         <hr>
         <p>Number of Pizzas: <span id="pizzaNum"></span></p>
